--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -5,14 +5,16 @@
     <%= form.label :title %><br>
     <%= form.text_field :title %>
     <% @article.errors.full_messages_for(:title).each do |message| %>
-    <div><%= message %></div>
+      <div><%= message %></div>
+    <% end %>
   </div>
 
   <div>
     <%= form.label :body %><br>
-    <%= form.text_area :body %>
+    <%= form.text_area :body %><br>
     <% @article.errors.full_messages_for(:body).each do |message| %>
-    <div><%= message %></div>
+      <div><%= message %></div>
+    <% end %>
   </div>
 
   <div>
